SOMbrero 1.2-6
Fixed bugs:
  eps0 parameter taken into account in shiny app
  correct use of "what" parameter for superclasses plot

Improvements:
  hexagonal topography
  data from the environment can be loaded directly in the shiny application
  3 examples data sets are loaded by default in the shiny app
  code used in the app is print to ease reproducibility
  
Misc:
  most of the plots are now in ggplot2
  more intuitive shiny application

********************************************************************************
SOMbrero 1.2-5
Fixed bugs:
  adapted script to the new stringsAsFactor policy on devel
  fixed a bug for non significant variables in summary
  
Misc:
  roxygenized documentation
  changed maintainer name and address, added new contributors
  fixed URI in package vignette

********************************************************************************  
SOMbrero 1.2-4
Fixed bugs:
  changed unitary tests because of changes in RGN for devel
  
Misc:
  changed maintainer name and address

********************************************************************************
SOMbrero 1.2-3
Fixed bugs:
  removed unecessary scaling checks for 'relational' in predict
  
Improvements:
  used testthat to implement unitary tests
  remove redundant code in trainSOM
  fixed seed in unitary tests for reproducibility reasons

Misc:
  changed message at start (that might be construed as offensive by colorblinds)

********************************************************************************
SOMbrero 1.2-2
Fixed bugs:
  fix a bug in plot.somSC for customized colors (reported by Duncan Murdoch)
  fix a bug in shiny app (downloading CSV files with rownames)
  fix a bug in 'plot.legend' for SC plot of type 'color'
  
Improvements:
  improved rendering of data in shiny app
  added 'legend' to all SC plots for shiny app
  added features to display titles (cluster number) in package and shiny app
  added CSV download for result of the clustering in shiny app
  
Misc: